added main auth apis
